--- a/手写数字识别/手写数字识别.ipynb
+++ b/手写数字识别/手写数字识别.ipynb
@@ -221,7 +221,7 @@
     "model.add(MaxPool2D(2,2))\n",
     "model.add(Dropout(0.25))\n",
     "model.add(Conv2D(128,kernel_size=(3,3),activation='relu',kernel_initializer='he_normal',padding='same'))\n",
-    "#model.add(Conv2D(128,kernel_size=(3,3),activation='relu',kernel_initializer='he_normal',padding='same'))\n",
+    "model.add(Conv2D(128,kernel_size=(3,3),activation='relu',kernel_initializer='he_normal',padding='same'))\n",
     "model.add(Dropout(0.25))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(128,activation='relu'))\n",
